Fixed reflowing work with min-height, and to work better in general. Corrected baseline grid alignment.

--- a/css/modules/leader.css
+++ b/css/modules/leader.css
@@ -1,7 +1,7 @@
 /* ToDo: Make .leader min-height not break the JS to add automatic spacing on short pieces. */
 .leader h1, 
 .leader h2 { font-size:3.3em; letter-spacing:-1px; line-height:1.3em; margin-top:0.65em; padding-top:0; }
-.leader.first.front { max-height:630px; }
+.leader.first.front { min-height:640px; }
 .leader.read,
 .leader .read,
 .leader .read a { color:#bbb; }
